--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -15,7 +15,7 @@
 
 //$white: #fff;
 
-//$grey-dk-000: #959396;
+$grey-dk-000: #959396;
 //$grey-dk-100: #5c5962;
 //$grey-dk-200: #44434d;
 //$grey-dk-250: #302d36;
@@ -61,7 +61,7 @@ $red-150: #A20013;
 //$body-text-color: $grey-dk-100;
 //$body-heading-color: $grey-dk-300;
 //$search-result-preview-color: $grey-dk-000;
-$nav-child-link-color: $red-150;
+$nav-child-link-color: $grey-dk-000;
 $link-color: $red-000;
 $btn-primary-color: $red-000;
 //$base-button-color: #f7f7f7;
